--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="Home.html">Home</a></li>
+        <li class="active"><a href="Index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Calendar.html">Calendar</a></li>
         <li><a href="Store.html">Store</a></li>
