--- a/About.html
+++ b/About.html
@@ -101,7 +101,7 @@
       <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div><!-- Closes Upcoming Shows Second poster -->
     <div class="col-sm-4 never-know">
-      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from a local band to a "Nashville A List" artist. We might even be hosting local comedians to bring some cheer and laughs. We host a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more upcoming events. If you have questions, you can contact us <a href="Calendar.html" class="link-primary">here</a>.</p>
+      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from a local band to a "Nashville A List" artist. We might even be hosting local comedians to bring some cheer and laughs. We host a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more upcoming events. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
   </div>
 </div><br>
