--- a/Store.html
+++ b/Store.html
@@ -106,7 +106,7 @@
           </div>
           <div class="col-sm-4 never-know">
             <div class="">
-              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions or want our next show to be yours, you can contact us <a href="Calendar.html" class="link-primary">here</a></p>            </div>
+              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions or want our next show to be yours, you can contact us <a href="Contact.html" class="link-primary">here</a></p>            </div>
           </div>
         </div>
       </div>
