--- a/Store.html
+++ b/Store.html
@@ -46,7 +46,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Calendar.html">Calendar</a></li>
         <li class="active"><a href="Store.html">Store</a></li>
@@ -88,14 +88,6 @@
         <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
         <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall stage. The events below are upcoming at The Fiddle and Bow Music Hall, but there's more. Follow the link below to see our full calendar.</p>
         <div class="row">
-          <div class="col-sm-4">
-            <img src="images/JBB_MAR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>The Johnson Bentley Band</h2>
-            <h3>March 22nd, 2024</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="" class="btn custom-btn" role="button">Tickets</a>
-          </div>
           <div class="col-sm-4 show-2">
             <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>David Childers w/ Special Guest Cody Gentry</h2>
@@ -104,15 +96,24 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
           </div>
+          <div class="col-sm-4">
+            <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>One Step Ahead</h2>
+            <h3>April 26th, 2024</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/one-step-ahead-tickets-797097850127?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+          </div>
           <div class="col-sm-4 never-know">
             <div class="">
-              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions or want our next show to be yours, you can contact us <a href="Contact.html" class="link-primary">here</a></p>            </div>
+              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions or want our next show to be yours, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="container text-left">
-        <H1>Folk Art by Justin Atkin</H1>
+        <H1>Folk Art by Justin Thomas Atkin</H1>
         <p>Sharing our passion for southern folk art means getting it in the hands of collectors. If that's you, you can do just that becasue we have a lot of art for sale. It's all original too. You can reach out to us here and set up an appointment to visit our gallery at The Fiddle and Bow Music Hall or follow the link below to purchase art online.</p>
         <div class="row">
           <div class="col-sm-4">
@@ -125,7 +126,7 @@
           </div>
           <div class="col-sm-4">
             <div class="">
-              <p>Do you want to buy some original southern folk art by Justin Atkin? Click on the link below.</p>
+              <p>Do you want to buy some original southern folk art by Justin Thomas Atkin? Click on the link below.</p>
             </div>
             <div class="">
               <a class="btn btn-primary" href="https://www.chickenmanart.com/folk-and-outsider/for-the-wall/justin-atkin.html" role="button">Buy Art</a>
