--- a/FAQ.html
+++ b/FAQ.html
@@ -42,7 +42,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Calendar.html">Calendar</a></li>
         <li><a href="Store.html">Store</a></li>
@@ -69,16 +69,16 @@
       <p>No problem. We will accommodate you however possible. Our restroom and venue is ADA compliant.</p>
 
       <h1>What is your refund policy?</h1>
-      <p>Well we really hate that you can't make it, but we understand that things come up. Reach out to us and let us know what's going on. We'll do everything we can to be sure you're happy. You can contact us <a href="#" class="link-primary">here</a>.</p>
+      <p>Well we really hate that you can't make it, but we understand that things come up. Reach out to us and let us know what's going on. We'll do everything we can to be sure you're happy. You can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
 
       <h1>Do you allow photography?</h1>
       <p>Sure, pictures are no problem. The only time this would matter would be if the performing artist didn't want photography. We ain't into that yet, but if we do we'll address it at that time and will communicate at the show and online. If you do take pictures though, please be sure to tag us on social media - @thefiddleandbowmusichall. Also, be curteous of your neighbor and don't block their veiw of the show please.</p>
 
       <h1>How does my band get on stage?</h1>
-      <p>If you are an artist that is interested in performing or the manager of a band or artist, the best thing to do is contact us directly. We'd much rather talk directly with you to be sure all your questions are answered completley. You can contact us <a href="#" class="link-primary">here</a></p>.
+      <p>If you are an artist that is interested in performing or the manager of a band or artist, the best thing to do is contact us directly. We'd much rather talk directly with you to be sure all your questions are answered completely. You can contact us <a href="Contact.html" class="link-primary">here</a></p>.
 
       <h1>How do I purchase some of your folk art?</h1>
-      <p>If you want to buy art (or tickets), the process is really the same. You can contact us <a href="#" class="link-primary">here</a> or watch our page to see when we'll be at local art events. We try to advertise when Justin Atkin will be at local art shows to include locations.</p>
+      <p>If you want to buy art (or tickets), the process is really the same. You can contact us <a href="Contact.html" class="link-primary">here</a> or watch our page to see when we'll be at local art events. We try to advertise when Justin Thomas Atkin will be at local art shows to include locations.</p>
 
       <h1>Are there any local restaurants you recommend?</h1>
       <p>If you are coming from out of town and need a place to stay, there are hotels in Anderson, SC which is about a 45 minute ride from the venue. We reccomend Holiday Inn on Clemson Boulveard. You can find directions here.</p>
@@ -87,7 +87,7 @@
       <p>If you are coming from out of town and need a place to stay, there are hotels in Anderson, SC which is about a 45 minute ride from the venue. We reccomend Holiday Inn on Clemson Boulveard. You can find directions here.</p>
 
       <h1>How do I buy tickets?</h1>
-      <p>Well we really hate that you can't make it, but we understand that things come up. Reach out to us and let us know what's going on. We'll do everything we can to be sure you're happy. You can contact us <a href="#" class="link-primary">here</a>.</p>
+      <p>Well we really hate that you can't make it, but we understand that things come up. Reach out to us and let us know what's going on. We'll do everything we can to be sure you're happy. You can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
 
     <div class="col-sm-4 text-left">
