--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>The Fiddle & Bow About Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
+  <meta name="keywords" content="live music, music venue, concerts, performances, Honea Path, SC, Bluegrass, Country, Singer Songwriter, Folk, Gospel">
+  <meta name="description" content="The Fiddle and Bow Music Hall is a Live Music Venue featuring live music events in Honea Path, SC. Enjoy a family friendly atmosphere with only 115 seats and a diverse lineup of talented artists.">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/Home.css">
   <style>
@@ -56,8 +60,8 @@
 <div class="container text-center"> <!-- Opens container for About Piece-->
   <div class="row content one"> <!-- Opens row for Piece -->
     <div class="col-sm-9 text-left"> <!-- Opens section for about piece -->
-      <h1>About The Fiddle & Bow Music Hall</h1>
-      <p>The mission of The Fiddle and Bow Music Hall is to share our love of music, southern folk art, and to promote local talent. Our venue is housed in a building that was built around 100 years ago and was originally a grocery store called Bannister's Grocery Store. Bannister's has been out of business for 50 years. We only have 150 seats so, you can rest assure that you will have a very private experience any event you attend. If you would like to learn more about The Fiddle and Bow Music Hall, meet the owners, and more, click <a href="About.html" class="link-primary">here</a>.</p>
+      <h1>Welcome To The Fiddle & Bow Music Hall</h1>
+      <p>The mission of The Fiddle and Bow Music Hall is to share our love of music, southern folk art, and to promote local talent. Our venue is housed in a building that was built around 100 years ago and was originally a grocery store called Bannister's Grocery Store. Bannister's has been out of business for 50 years. This once upon a time grocery store now has only 115 seats that provide very private performances by the artists we host. The walls that once held goods now display our personal art collection and that for sale by Justin Thomas Atkin. If you would like to learn more about The Fiddle and Bow Music Hall, meet the owners, the art of Justin Thomas Atkin, and more click <a href="About.html" class="link-primary">here</a>.</p>
     </div>
     <div class="col-sm-3 text-left about">
       <img src="images/Home Page_Front of Venue.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -69,8 +73,7 @@
   <div class="row content two"> <!-- Opens row for Piece -->
     <div class="col-sm-9 text-left"> <!-- Opens section for about piece -->
       <h1>Upcoming Shows & Events</h1>
-      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
-      </p>
+      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
     </div>
     <div class="col-sm-3 text-left about">
       <img src="images/Home Page_Band On Stage.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -82,7 +85,7 @@
   <div class="row content"> <!-- Opens row for Piece -->
     <div class="col-sm-4 text-left"> <!-- Opens section for about piece -->
       <h1>Store</h1>
-      <p>Whether you are looking to buy tickets to an upcoming show, a shirt to wear around town, a tote bag branded with our logo, or some one-of-a-kind original southern folk art by Justin Atkin, you can do all of that on our Store page. We do not sell NFTs or prints - only original art. Click <a href="Store.html" class="link-primary">here</a> to visit the store. </p>
+      <p>Do you want to buy a shirt to wear around town to support us, a tote bag branded with our logo, or some one-of-a-kind original southern folk art by Justin Thomas Atkin? You can do all of that on our Store page. We do not sell NFTs or prints - only original art. One of the best ways you can participate in our mission is to buy local art. When you do, you are supporting art, the artist, and you are getting something unique. Original art pieces are the only one of their kind IN THE WORLD. That’s fun to think about. Click <a href="Store.html" class="link-primary">here</a> to visit the store.</p>
     </div>
     <div class="col-sm-4 text-left about">
       <img src="images/Home Page_Shirt.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -97,14 +100,14 @@
   <div class="row content"> <!-- Opens row for Piece -->
     <div class="col-sm-4 text-left"> <!-- Opens section for about piece -->
       <h1>Questions</h1>
-      <p>If there's something you'd like to know, you can visit our FAQ page and look for your answer there. For many questions that we frequently get, we will post the question and answer on this page. This is probably the quickest way to get answers to questions about parking, food, hotels, etc.  Click <a href="FAQ.html" class="link-primary">here</a> to go to our Frequently Asked Questions page. </p>
+      <p>For many questions that we frequently get, we will post the question and answer on our FAQ page. If there's something you'd like to know, you can visit our FAQ page and look for your answer there. This is probably the quickest way to get answers to questions about parking, food, hotels, etc. Click <a href="FAQ.html" class="link-primary">here</a> to find our Frequently Asked Questions page.</p>
     </div>
     <div class="col-sm-4 text-left about">
       <img src="images/Home Page_Questions.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
     </div> <!-- Closes section for About piece -->
     <div class="col-sm-4 text-left"> <!-- Opens section for about piece -->
       <h1>Get In Touch</h1>
-      <p>Can't find the answer to your question about The Fiddle and Bow Music Hall on our FAQ page? Do you need directions, our email, or phone number? Well, you are more than welcome to contact us directly. We are more than happy to help you with almost all concerns over the phone. Here's the good part - you will always get to talk to a real live person. No robots or AI here. You can contact the box office for tickets, questions, etc. <a href="Contact.html" class="link-primary">here</a>. </p>
+      <p>Can't find the answer to your question about The Fiddle and Bow Music Hall on our FAQ page? Do you need directions, our email, or our phone number? Well, you are more than welcome to contact us directly. We are more than happy to help you with almost all concerns over the phone too. Here's the good part - you will always get to talk to a real live person. There are no robots or AI here. You can contact the box office for tickets, questions, etc. <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
   </div> <!-- Closes row for About Piece -->
 </div> <!-- Closes container for About Piece-->
