--- a/Store.html
+++ b/Store.html
@@ -4,16 +4,20 @@
   <title>The Fiddle & Bow Music Hall Store</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
+  <meta name="keywords" content="live music, music venue, concerts, performances, Honea Path, SC, Bluegrass, Country, Singer Songwriter, Folk, Gospel">
+  <meta name="description" content="The Fiddle and Bow Music Hall is a Live Music Venue featuring live music events in Honea Path, SC. Enjoy a family friendly atmosphere with only 115 seats and a diverse lineup of talented artists.">
 
   <!-- Link for CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/Store.css">
   <style>
     .footer {
-      background-image: url('images/floorRug2.jpg'); /* Replace with the path to your image */
+      background-image: url('images/floorRug2.jpg');
       background-size: cover;
-      background-position: right bottom; /* Adjust the position as needed */
-      color: white; }/* Adjust text color as needed */
+      background-position: right bottom;
+      color: white;
+    }
     .navbar-inverse {
       background-image: url('images/Stage Pattern Dark 80.jpg');
       background-size: cover;
@@ -25,14 +29,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Opensans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-  <!-- Link for google fonts -->
+  <!-- Link for jQuery and Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-
 <body>
 
-<nav class="navbar navbar-inverse"> <!-- Opens nav bar -->
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -41,7 +44,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">
-        <img src="images/F&B Logo for Nav Bar.png" alt="Image" class="mr-2"> <!-- Add this line -->
+        <img src="images/F&B Logo for Nav Bar.png" alt="Image" class="mr-2">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -55,13 +58,13 @@
       </ul>
     </div>
   </div>
-</nav> <!-- Closes nav bar -->
+</nav>
 
-<div class="container-fluid text-center"> <!-- Opens container for About Piece-->
-  <div class="row content"> <!-- Opens row for Piece -->
+<div class="container-fluid text-center"> <!-- Opens container for Store -->
+  <div class="row content"> <!-- Opens row for Store -->
     <div class="container text-left">
-      <H1>The Fiddle & Bow Music Hall Store</H1>
-      <p>We offer the following merchandise available for you to purchase branding with The Fiddle and Bow Music Hall logo. If you want to help support our mission of sharing our love for music, southern folk art, and promoting loval talent, you can do this by representing our venue around town. The items below are printed on high quality materials and will last. We believe in quality music, art, and merchandise. Folks caught wearing our logo in public have been known to get free tickets., just saying. Order your merchandise by following the link below each item. This will take you to a new page where you will enter quantity, color, size, etc.<p>
+      <h1>The Fiddle & Bow Music Hall Store</h1>
+      <p>You can help support our mission of sharing our love for music, southern folk art, and promoting local talent, by representing our venue around town. The items below are printed on high-quality materials that will last for years to come. We believe in quality music, art, and merchandise. Folks caught wearing The Fiddle and Bow Music Hall clothing in public have been known to get free tickets, just saying. Order your merchandise by following the link below each item. This will take you to a new page where you will enter quantity, color, size, etc.</p>
       <div class="row">
         <div class="col-sm-4 bag">
           <img src="images/Store_Bag.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -80,15 +83,16 @@
         </div>
       </div>
     </div>
+  </div> <!-- Closes row for Store -->
+</div> <!-- Closes container for Store -->
 
-
-  <div class="container-fluid text-center"> <!-- Opens container for About Piece-->
-    <div class="row content"> <!-- Opens row for Piece -->
-      <div class="container text-left">
-        <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
-        <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall stage. The events below are upcoming at The Fiddle and Bow Music Hall, but there's more. Follow the link below to see our full calendar.</p>
-        <div class="row">
-          <div class="col-sm-4 show-2">
+<div class="container-fluid text-center"> <!-- Opens container for Shows -->
+  <div class="row content"> <!-- Opens row for Shows -->
+    <div class="container text-left">
+      <h1>Upcoming Shows at The Fiddle & Bow Music Hall</h1>
+      <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres and full all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
+      <div class="row">
+        <div class="col-sm-4 show-1">
             <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>David Childers w/ Special Guest Cody Gentry</h2>
             <h3>April 20th, 2024</h3>
@@ -96,7 +100,7 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 show-2">
             <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
             <h2>One Step Ahead</h2>
             <h3>April 26th, 2024</h3>
@@ -106,101 +110,99 @@
           </div>
           <div class="col-sm-4 never-know">
             <div class="">
-              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions or want our next show to be yours, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
+              <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
             </div>
-          </div>
-        </div>
+         </div>
       </div>
-
-      <div class="container text-left">
-        <H1>Folk Art by Justin Thomas Atkin</H1>
-        <p>Sharing our passion for southern folk art means getting it in the hands of collectors. If that's you, you can do just that becasue we have a lot of art for sale. It's all original too. You can reach out to us here and set up an appointment to visit our gallery at The Fiddle and Bow Music Hall or follow the link below to purchase art online.</p>
-        <div class="row">
-          <div class="col-sm-4">
-            <img src="https://www.chickenmanart.com/images/2023%20Images/Wall%20Art/Justin%20Atkin/WP2708_2714/Justin-Atkin-WP2710_1.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <p>"Some People Are Poor" - $125</p>
-          </div>
-          <div class="col-sm-4">
-            <img src="https://www.chickenmanart.com/images/2023%20Images/Wall%20Art/Justin%20Atkin/WP2708_2714/Justin-Atkin-WP2708_1.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <p>"Raising Our Kids w/ Andy Griffith" - $125</p>
-          </div>
-          <div class="col-sm-4">
-            <div class="">
-              <p>Do you want to buy some original southern folk art by Justin Thomas Atkin? Click on the link below.</p>
-            </div>
-            <div class="">
-              <a class="btn btn-primary" href="https://www.chickenmanart.com/folk-and-outsider/for-the-wall/justin-atkin.html" role="button">Buy Art</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br><br>
-
-      <footer class="footer bg-black text-center text-lg-start text-white">
-        <!-- Grid container -->
-        <div class="container p-4">
-          <!-- Grid row -->
-          <div class="row my-4">
-            <!-- Circle Logo Grid column -->
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
-                <img class="mobile-logo" src="images/The Fiddle and the Bow_Circle Logo.png" height="200" alt="circle with word The Fiddle and Bow Music Hall" loading="lazy" />
-              </div>
-            </div>
-            <!-- Circle Logo Grid column -->
-
-            <!-- Mission Statement Grid column -->
-            <div class="mobile-mission col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h2 class="mb-4">Mission</h2>
-              <p class="text-center">To Share our Passion for Music,</p>
-              <p class="text-center">Southern Folk Art,</p>
-              <p class="text-center">& Promote Local Talent.</p>
-            </div>
-            <!-- Mission Statement Grid column -->
-
-            <!-- Get In Touch Grid column -->
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-center">
-              <div class="contact-info" style="max-width: 300px;"> <!-- Adjust max-width as needed -->
-                <h2 class="mb-4 text-center mt-0">Get In Touch</h2>
-                <ul class="list-unstyled text-center" style="margin-bottom: 50px;">
-                  <li>
-                    <p><a href="https://www.google.com/maps/search/?api=1&query=45+N.+Main+Street+Honea+Path,+SC" style="color: white;">45 N. Main Street Honea Path, SC</a></p>
-                    <p><a href="tel:+18649402254" style="color: white;">(864) 940-2254 | 7AM-9PM</a></p>
-                    <p><a class="email" href="mailto:thefiddleandbowmusichall@gmail.com" style="color: white;">thefiddleandbowmusichall@gmail.com</a></p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <!-- Get In Touch Grid column -->
-
-            <!-- Social Media Grid column -->
-            <div class="align-items-center justify-content-center social">
-              <h2>Social Media</h2>
-              <div>
-                <a href="https://www.facebook.com/fiddleandbowmusichall">
-                  <img src="images/Facebook_logo_(square).png" alt="Facebook" class="social-icon" style="width: 30px; height: 30px;">
-                </a>
-                <a href="https://www.instagram.com/thefiddleandbowmusichall/">
-                  <img src="images/Instagram Logo Square.png" alt="Instagram" class="social-icon" style="width: 30px; height: 30px;">
-                </a>
-              </div>
-            </div>
-            <!-- Social Media Grid column -->
-          </div>
-          <!-- Grid row -->
-        </div>
-        <!-- Grid container -->
-      </footer> <!-- Close Footer -->
     </div>
-    <!-- Grid row -->
+  </div> <!-- Closes row for Shows -->
+</div> <!-- Closes container for Shows -->
+
+<div class="container text-left"> <!-- Opens container for Folk Art -->
+  <h1>Folk Art by Justin Thomas Atkin</h1>
+  <p>Sharing our passion for southern folk art means getting it in the hands of collectors. If that's you, we have art for sale. It's all original too and by Honea Path’s own Justin Thomas Atkin. You can reach out to us here and set up an appointment to visit our gallery at The Fiddle and Bow Music Hall or follow the link below to purchase art online. The link below takes you to a new page belonging to an art gallery. If you’d like to know more about the artwork of Justin Thomas Atkin, you can read an article <a href="https://www.andersonobserver.com/news/paintings-storytelling-bring-acclaim-to-local-artist">here</a> or watch a video interview <a href="https://www.youtube.com/watch?v=NjEpGTDzUik">here</a>.</p>
+  <div class="row">
+    <div class="col-sm-4 art-1">
+      <img src="images/Home Page_Atkin Art.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <br><br>
+      <p>"Some People Are Poor" - $125</p>
+    </div>
+    <div class="col-sm-4 art-2">
+      <img src="images/Andy.png" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <br><br>
+      <p>"Raising Our Kids w/ Andy Griffith" - $125</p>
+    </div>
+    <div class="col-sm-4">
+      <div class="buy-art">
+        <p>Do you want to buy some original southern folk art by Justin Thomas Atkin? Click on the link below.</p>
+      </div>
+      <div class="art-button">
+        <a class="btn custom-btn" href="https://www.chickenmanart.com/folk-and-outsider/for-the-wall/justin-atkin.html" role="button">Buy Art</a>
+      </div>
+    </div>
+  </div>
+</div> <!-- Closes container for Folk Art -->
+
+<footer class="footer bg-black text-center text-lg-start text-white">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row my-4">
+      <!--Circle Logo Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
+          <img class= "mobile-logo" src="images/The Fiddle and the Bow_Circle Logo.png" height="200" alt="circle with word The Fiddle and Bow Music Hall" loading="lazy" />
+        </div>
+      </div>
+      <!--Circle Logo Grid column-->
+
+      <!--Mission Statement Grid column-->
+      <div class="mobile-mission col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h2 class="mb-4">Mission</h2>
+        <p class="text-center"> To Share our Passion for Music,</p>
+        <p class="text-center">Southern Folk Art,</p>
+        <p class="text-center">& Promote Local Talent.</p>
+      </div>
+      <!--Mission Statement Grid column-->
+
+      <!--Get In Touch Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-center">
+        <div class="contact-info" style="max-width: 300px;"> <!-- Adjust max-width as needed -->
+          <h2 class="mb-4 text-center mt-0">Get In Touch</h2>
+          <ul class="list-unstyled text-center" style="margin-bottom: 50px;">
+            <li>
+              <p><a href="https://www.google.com/maps/search/?api=1&query=45+N.+Main+Street+Honea+Path,+SC" style="color: white;">45 N. Main Street Honea Path, SC</a></p>
+              <p><a href="tel:+18649402254" style="color: white;">(864) 940-2254 | 7AM-9PM</a></p>
+              <p><a class="email" href="mailto:thefiddleandbowmusichall@gmail.com" style="color: white;">thefiddleandbowmusichall@gmail.com</a></p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--Get In Touch Grid column-->
+
+      <!--Social Media Grid column-->
+      <div class="align-items-center justify-content-center social">
+        <h2>Social Media</h2>
+        <div>
+          <a href="https://www.facebook.com/fiddleandbowmusichall">
+            <img src="images/Facebook_logo_(square).png" alt="Facebook" class="social-icon" style="width: 30px; height: 30px;">
+          </a>
+          <a href="https://www.instagram.com/thefiddleandbowmusichall/">
+            <img src="images/Instagram Logo Square.png" alt="Instagram" class="social-icon" style="width: 30px; height: 30px;">
+          </a>
+        </div>
+      </div>
+      <!--Social Media Grid column-->
+    </div>
+    <!--Grid row-->
   </div>
   <!-- Grid container -->
+</footer>
 
-
-  <div class="text-center p-3">
-    <p>© 2024 Copyright | The Fiddle and Bow Music Hall | Designed & Built by </a><a class="text-white" href="https://invisiblekatanaartwork.com/">Invisible Katana Artwork</a></p>
-  </div> <!-- Open Copyright -->
-  <!-- Close Copyright -->
+<div class="text-center p-3">
+  <p>© 2024 Copyright | The Fiddle and Bow Music Hall | Designed & Built by </a><a class="text-white" href="https://invisiblekatanaartwork.com/">Invisible Katana Artwork</a></p>
+</div> <!-- Open Copyright -->
+<!-- Close Copyright -->
 
 </body>
 </html>
