--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,10 @@
   <title>The Fiddle & Bow Music Hall Contact Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
+  <meta name="keywords" content="live music, music venue, concerts, performances, Honea Path, SC, Bluegrass, Country, Singer Songwriter, Folk, Gospel">
+  <meta name="description" content="The Fiddle and Bow Music Hall is a Live Music Venue featuring live music events in Honea Path, SC. Enjoy a family friendly atmosphere with only 115 seats and a diverse lineup of talented artists.">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/Contact.css">
   <style>
@@ -43,7 +47,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="About.html">About</a></li>
         <li><a href="Calendar.html">Calendar</a></li>
         <li><a href="Store.html">Store</a></li>
@@ -56,17 +60,6 @@
 
 <div class="container text-center"> <!-- Opens container for About Piece-->
   <div class="row content"> <!-- Opens row for Piece -->
-    <div class="col-sm-8 text-left"> <!-- Opens section for about piece -->
-      <h1>Questions?</h1>
-      <p>If you want to get to know us better, ask general questions, are confused about something, or just want to say hello, social media is an option. You can always call the box office or email for these needs too. You can also check our FAQ page <a href="FAQ.html" class="link-primary">here</a> for your question.You may find an answer there. We don’t mind answering in person though. We think it’s easier to ask someone too.</p>
-      <br>
-      <p>We look forward to hearing from you and filling our downtown venue with artists of all kinds and all levels. We want to share our love and collection of art with you and provide a downtown feels like home experience for our local community and others. It’s our mission here at The Fiddle and Bow Music Hall where we look to promote local talent and share our passions for music and southern folk art with the local community and the world.</p>
-      </p>
-      <h1>General Booking</h1>
-      <p>Do you want to get on stage at The Fiddle and Bow Music Hall! Great! We want to have you. Music is such a big world and there are so many types. We typically look for country music, folk music, singer-songwriters, or bluegrass musicians but, we promote local talent and the love of music as part of our mission at The Fiddle and Bow Music Hall. If you have a question about booking a gig, the best way to contact us is by <a href="tel:+18649402254" class="link-primary">phone</a>. We like traditional things, and you will talk to a REAL LIVE PERSON. </p>
-      <h1>Marketing Materials</h1>
-      <p>We love art. Marketing and social media content are both art. We use a local artist for our media management so, if you don’t have ads, we can help. If there are photos, videos, etc. that you want to use for your booked gig, let us know and we will work with you. We are creatives and we understand the passion involved. Promoting art, especially Southern Folk Art, is a big part of what we do at The Fiddle and Bow Music Hall. Please include any photographers, etc. that need to be tagged in posts and what their social media pages are. For marketing materials questions, you can call the box office but we will need you to email them to us <a href="mailto:thefiddleandbowmusichall@gmail.com" class="link-primary">here</a>.</p>
-    </div>
     <div class="col-sm-4 text-left">
       <div class="col questions">
         <h1>Contact The Fiddle & Bow Music Hall</h1>
@@ -82,20 +75,30 @@
         <h2>Email</h2>
         <p><a href="mailto:thefiddleandbowmusichall@gmail.com" style="color: white;">thefiddleandbowmusichall@gmail.com</a></p>
         <h2>Social Media</h2>
-            <div class="">
-              <div class="row justify-content-center">
-                <div class="col-md-4 mb-8 mb-md-0">
-                  <a href="https://www.facebook.com/fiddleandbowmusichall">
-                    <img src="images/Facebook_logo_(square).png" alt="Facebook" class="social-icon" style="width: 25px; height: 25px;">
-                  </a>
-                  <a href="https://www.instagram.com/thefiddleandbowmusichall/">
-                    <img src="images/Instagram Logo Square.png" alt="Instagram" class="social-icon" style="width: 25px; height: 25px;">
-                  </a>
-                </div>
-              </div>
+        <div class="">
+          <div class="row justify-content-center">
+            <div class="col-md-4 mb-8 mb-md-0">
+              <a href="https://www.facebook.com/fiddleandbowmusichall">
+                <img src="images/Facebook_logo_(square).png" alt="Facebook" class="social-icon" style="width: 25px; height: 25px;">
+              </a>
+              <a href="https://www.instagram.com/thefiddleandbowmusichall/">
+                <img src="images/Instagram Logo Square.png" alt="Instagram" class="social-icon" style="width: 25px; height: 25px;">
+              </a>
             </div>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="col-sm-8 text-left"> <!-- Opens section for about piece -->
+      <h1>Questions?</h1>
+      <p>If you want to get to know us better, ask general questions about The Fiddle and Bow Music Hall, are confused about something, or just want to say hello, social media is a great option. You can find our social media links in one place <a href="Contact.html" class="link-primary">here</a>. You can always call the box office or email us too. You can also check our FAQ page <a href="FAQ.html" class="link-primary">here</a> for your questions. You may find an answer there. We don’t mind answering in person though. We think it’s easier to ask someone too.</p>
+      <br>
+      <p>We look forward to hearing from you and filling our downtown venue with artists of all kinds and all levels. We want to share our love and collection of art with you and provide a downtown feels like home experience for our local community and others. It’s our mission here at The Fiddle and Bow Music Hall where we share our love for music, southern folk art, and promote local talent.</p>
+      <h1>General Booking</h1>
+      <p>Do you want to get on stage at The Fiddle and Bow Music Hall? Great! We want to have you. Music is such a big world and there are so many types. We typically look for country music, folk music, singer-songwriters, or bluegrass musicians but, we promote local talent and the love of music as part of our mission at The Fiddle and Bow Music Hall. If you have a question about booking a gig, the best way to contact us is by <a href="tel:+18649402254" class="link-primary">phone</a>. We like traditional things, and you will talk to a REAL LIVE PERSON. The box office hours are 7AM to 9PM.</p>
+      <h1>Marketing Materials</h1>
+      <p>We use a local artist for our media management so, if you don’t have ads, no worries. Our artist can help. If there are photos, videos, etc. that you want to use for your booked gig, let us know and we will work with you. We are creatives and we understand the passion involved. Promoting art, especially southern folk art, is a big part of what we do at The Fiddle and Bow Music Hall. If you provide marketing materials, please include any photographers, etc. that need to be tagged in posts and what their social media pages are. For marketing questions, you can call the box office at <a href="tel:+18649402254" class="link-primary">(864) 940-2254</a> between 7AM and 9PM but, we will need you to email them to us <a href="mailto:thefiddleandbowmusichall@gmail.com" class="link-primary">here</a>.</p>
+    </div>
   </div> <!-- Closes row for About Piece -->
 </div> <!-- Closes container for About Piece-->
 </div>
@@ -104,15 +107,7 @@
 <div class="container text-left"> <!-- Opens Upcoming Shows Container -->
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
-    <div class="col-sm-4">
-      <img src="images/JBB_MAR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>The Johnson Bentley Band</h2>
-      <h3>March 22nd, 2024</h3>
-      <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $10</h3>
-      <a href="" class="btn custom-btn" role="button">Tickets</a>
-    </div><!-- Closes Upcoming Shows first poster -->
-    <div class="col-sm-4 show-2">
+    <div class="col-sm-4 show-1">
       <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>David Childers w/ Special Guest Cody Gentry</h2>
       <h3>April 20th, 2024</h3>
@@ -120,8 +115,16 @@
       <h3>Tickets $20</h3>
       <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div><!-- Closes Upcoming Shows Second poster -->
+    <div class="col-sm-4 show-2">
+      <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>One Step Ahead</h2>
+      <h3>April 26th, 2024</h3>
+      <h3>Red Door 6PM | Show 7PM</h3>
+      <h3>Tickets $15</h3>
+      <a href="https://www.eventbrite.com/e/one-step-ahead-tickets-797097850127?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+    </div>
     <div class="col-sm-4 never-know">
-      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be your friend’s local band to a Nashville A List artist. Or we might be hosting local comedians to bring some cheer and laughs. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
+      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information.</p>
     </div>
   </div>
 </div><br>
